[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ODlinear.py"]

[project]
name = "odr"
version = "1.0"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn"
]
requires-python = ">=3.9"
authors = [
  {name = "Wing-Fai Thi", email = "wingfai.thi@googlemail.com"},
]
description = "Orthogonal Distance Regressor"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Regression", "Machine learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9"
]

[project.urls]
Homepage = "https://www.astrowing.eu"
Repository = "https://github.com/wfthi/OrthogonalDistanceRegressor"
